--- a/BadHunter/Base.lproj/Main.storyboard
+++ b/BadHunter/Base.lproj/Main.storyboard
@@ -32,36 +32,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="hzn-Xg-KEe">
-                                <rect key="frame" x="35" y="20" width="325" height="236"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="hzn-Xg-KEe">
+                                <rect key="frame" x="199" y="28" width="202" height="204"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JrE-1L-TC4">
-                                <rect key="frame" x="35" y="264" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BadHunter" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Ay-p5-XAw">
+                                <rect key="frame" x="16" y="252" width="85" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v.1.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bJW-ZQ-ta8">
+                                <rect key="frame" x="548" y="251" width="36" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JrE-1L-TC4">
+                                <rect key="frame" x="16" y="327" width="1175.5" height="20.5"/>
                                 <string key="text">Special thanks to: Gru, Kingpin, Godzilla, Alien, Dr. Octopus, King Kong, Predator, el Macho, and Randall Boggs and many others that I forgot to mention.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="v.1.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bJW-ZQ-ta8">
-                                <rect key="frame" x="542" y="28" width="36" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="BadHunter" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Ay-p5-XAw">
-                                <rect key="frame" x="368" y="28" width="83" height="21"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="© Copyright MaloSA, 2015" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HqK-Nd-ZHi">
-                                <rect key="frame" x="368" y="127" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hyr-CO-zAY">
-                                <rect key="frame" x="285" y="550" width="30" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hyr-CO-zAY">
+                                <rect key="frame" x="285" y="597.5" width="30" height="30"/>
                                 <state key="normal" title="OK">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -69,8 +63,28 @@
                                     <segue destination="UU1-n1-PvC" kind="unwind" unwindAction="dismissCredits:" id="i9Z-rE-CKd"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© Copyright MaloSA, 2015" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HqK-Nd-ZHi">
+                                <rect key="frame" x="278" y="292" width="149.5" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hzn-Xg-KEe" firstAttribute="top" secondItem="oHd-7V-FU1" secondAttribute="bottom" constant="8" symbolic="YES" id="2jz-Hf-wO8"/>
+                            <constraint firstItem="JrE-1L-TC4" firstAttribute="leading" secondItem="ya3-B4-eje" secondAttribute="leadingMargin" id="7yX-Zk-6Zj"/>
+                            <constraint firstItem="5Ay-p5-XAw" firstAttribute="leading" secondItem="ya3-B4-eje" secondAttribute="leadingMargin" id="Ckb-hL-5Fx"/>
+                            <constraint firstAttribute="centerX" secondItem="hzn-Xg-KEe" secondAttribute="centerX" id="Dam-gt-ROF"/>
+                            <constraint firstAttribute="centerX" secondItem="hyr-CO-zAY" secondAttribute="centerX" id="ENe-dl-fxc"/>
+                            <constraint firstItem="5Ay-p5-XAw" firstAttribute="top" secondItem="hzn-Xg-KEe" secondAttribute="bottom" constant="20" id="NTx-dg-8dd"/>
+                            <constraint firstItem="HqK-Nd-ZHi" firstAttribute="top" secondItem="5Ay-p5-XAw" secondAttribute="bottom" constant="20" id="O4g-AF-HJe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bJW-ZQ-ta8" secondAttribute="trailing" id="OiW-Cw-Xa1"/>
+                            <constraint firstItem="hyr-CO-zAY" firstAttribute="top" secondItem="JrE-1L-TC4" secondAttribute="bottom" constant="250" id="TU6-ei-Ygi"/>
+                            <constraint firstItem="5Ay-p5-XAw" firstAttribute="baseline" secondItem="bJW-ZQ-ta8" secondAttribute="baseline" constant="0.5" id="wiF-vI-V6v"/>
+                            <constraint firstAttribute="centerX" secondItem="HqK-Nd-ZHi" secondAttribute="centerX" constant="-53" id="xUZ-Bf-bo9"/>
+                            <constraint firstItem="JrE-1L-TC4" firstAttribute="top" secondItem="HqK-Nd-ZHi" secondAttribute="bottom" constant="20" id="y27-xT-vts"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AMJ-xY-fNy" userLabel="First Responder" sceneMemberID="firstResponder"/>
